--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,7 @@
                             "src/assets"
                         ],
                         "styles": [
-                            "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+                            "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
                             "src/styles.css",
                             "src/theme.scss"
                         ],
@@ -86,8 +86,9 @@
                             "src/assets"
                         ],
                         "styles": [
-                            "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-                            "src/styles.css"
+                            "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
+                            "src/styles.css",
+                            "src/theme.scss"
                         ],
                         "scripts": []
                     }
